# pto-runtime

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ci.py  ci.sh  conftest.py  pyproject.toml
.agents/skills/cuda-backend-eval/: SKILL.md
.agents/skills/cuda-backend-eval/scripts/: cuda_artifact_index.py  cuda_benchmark.py  cuda_current_summary.py  cuda_pair_benchmark.py  cuda_pair_persistent_smoke.py  cuda_pair_smoke.py  cuda_persistent_lifecycle_matrix.py  cuda_persistent_smoke.py  cuda_scheduler_errors.py  cuda_scheduler_scaling.py  cuda_smoke.py  cuda_smoke_report.py  cuda_tensor_shape_sweep.py  cuda_validate_capture.py  cuda_validate_lifecycle_matrix.py  cuda_validate_smoke.py  cuda_validate_tensor_sweep.py  run-cuda-smoke.sh
.ai-instructions/git-commit/: commit-message.md
.claude/commands/: perf-example-device.md  profile.md  test-example-device.md  test-example-sim.md
.claude/rules/: architecture.md
.claude/skills/testing/: SKILL.md
.github/workflows/: ci.yml
docs/: annotated-aicpu-executor-scheduler.md  annotated-platform-device-runner.md  annotated-platform-profiling.md  annotated-pto-orchestrator.md  chip-level-arch.md  ci.md  developer-guide.md  distributed_level_runtime.md  linebyline-aicpu-resolve-and-dispatch-pto2.md  linebyline-pto2-submit-task.md  manual-dep-for-tensormap-design.md  manual-scope-v0-design.md  manual-scope-v1-explicit-only-design.md  manual-scope.md  paged-attention-example-codewalk.md  platform-codewalk.md  profiling-name-map.md  roadmap.md  scheduler.md  task-flow.md  tensor-dump.md  tensormap-ringbuffer-runtime-codewalk.md  tensormap-ringbuffer-runtime-guide.md  testing.md  worker-manager.md
docs/nvidia-backend/: evaluation-current.md  evaluation-history.md  evaluation.md  flows.md  overall.md  persistent-device.md  status.md
docs/plans/: 2026-03-16-pto-runtime-deep-tutorial.md
docs/superpowers/plans/: 2026-04-16-manual-scope-v1-explicit-only.md
docs/tutorial/: 01-execution-model-and-build-flow.md  02-platform-backends-and-abstraction.md  03-runtime-definition-and-lifecycle.md  04-tensormap-and-ringbuffer-deep-dive.md  05-profiling-examples-and-debugging.md  README.md
docs_contrib/: aicpu_build_graph_paged_attention_analysis.md  repo-analysis.md
docs_contrib/issues/: aicpu-orch.md
examples/a2a3/aicpu_build_graph/bgemm/: golden.py
examples/a2a3/aicpu_build_graph/docs/: INCORE_ORCHESTRATION_GUIDE.md
examples/a2a3/aicpu_build_graph/vector_example/: README.md  golden.py
examples/a2a3/host_build_graph/bgemm/: golden.py
examples/a2a3/host_build_graph/docs/: INCORE_ORCHESTRATION_GUIDE.md
examples/a2a3/host_build_graph/matmul/: golden.py
examples/a2a3/host_build_graph/vector_example/: README.md  golden.py
examples/a2a3/tensormap_and_ringbuffer/async_notify_demo/: test_async_notify_demo.py
examples/a2a3/tensormap_and_ringbuffer/bgemm/: golden.py
examples/a2a3/tensormap_and_ringbuffer/mixed_example/: golden.py
examples/aicpu_build_graph/paged_attention/: README.md  golden.py  swimlane.json
examples/aicpu_build_graph/vector_example/: README.md
examples/aicpu_build_graph_example/: README.md  golden.py
examples/aicpu_build_graph_example/kernels/: kernel_config.py
examples/host_build_graph/paged_attention/: README.md  golden.py
examples/host_build_graph/vector_example/: README.md  golden.py
examples/host_build_graph_example/: main.py
examples/scripts/: README.md  build_runtimes.py  code_runner.py  run_example.py  runtime_builder.py
examples/tensormap_and_ringbuffer/vector_example/: golden.py
examples/workers/: README.md
examples/workers/l2/: README.md
examples/workers/l3/: README.md
golden/: paged_attention_golden.py
python/: binary_compiler.py  bindings.py  elf_parser.py  kernel_compiler.py  pto_compiler.py  runtime_builder.py  runtime_compiler.py  task_interface.py  worker.py
python/bindings/: task_interface.cpp
python/simpler/: orchestrator.py  task_interface.py  worker.py
simpler_setup/: build_runtimes.py  cuda_callable_compiler.py  cuda_preflight.py  kernel_compiler.py  parallel_scheduler.py  platform_info.py  runtime_builder.py  runtime_compiler.py  scene_test.py
simpler_setup/tools/: README.md  device_log_resolver.py  dump_viewer.py  perf_to_mermaid.py  sched_overhead_analysis.py  swimlane_converter.py
src/a2a3/docs/: runtimes.md
src/common/distributed/: dist_chip_process.cpp  dist_chip_process.h  dist_orchestrator.cpp  dist_scheduler.cpp  dist_sub_worker.cpp  dist_sub_worker.h  dist_types.cpp  dist_types.h  dist_worker.cpp  dist_worker.h  dist_worker_manager.cpp  dist_worker_manager.h
src/common/hierarchical/: orchestrator.cpp  worker.cpp  worker_manager.h
src/common/sim_context/: CMakeLists.txt  cpu_sim_context.cpp  cpu_sim_context.h
src/common/task_interface/: call_config.h  callable.h  data_type.h  task_arg.h  task_args.h
src/common/worker/: chip_worker.cpp  chip_worker.h  pto_runtime_c_api.h
src/cuda/platform/onboard/aicpu/: CMakeLists.txt
src/cuda/platform/onboard/host/: CMakeLists.txt  pto_runtime_c_api.cpp
src/cuda/platform/onboard/scheduler/: CMakeLists.txt
src/runtime/aicpu_build_graph/: build_config.py
src/runtime/tensormap_and_ringbuffer/: build_config.py
tests/: conftest.py  test_runtime_builder.py
tests/st/aicore_op_timeout/: test_aicore_op_timeout.py
tests/st/setup/: __init__.py  elf_parser.py  environment.py  kernel_compiler.py  platform_info.py  pto_isa.py  runtime_builder.py  runtime_compiler.py  scene_test.py  toolchain.py
tests/ut/: hardware_test_utils.py  test_manual_scope_boundary.py  test_manual_scope_guards.py  test_runtime_builder.py
tests/ut/cpp/: test_a2a3_pto2_manual_scope_api.cpp  test_a2a3_pto2_manual_scope_runtime.cpp  test_dist_orchestrator.cpp  test_dist_scheduler.cpp
tests/ut/py/: test_chip_worker.py  test_cuda_backend.py  test_cuda_benchmark_report.py  test_cuda_kernel_compiler.py  test_cuda_persistent_codegen.py  test_cuda_preflight.py  test_cuda_scene_test.py  test_runtime_builder.py  test_task_interface.py
tools/: README.md  benchmark_rounds.sh  pto2_schedule_report.py  swimlane_converter.py
(+357 files in other folders)
